@@ -1,0 +1,3 @@
+prog: strlcat_strlcpy
+vgopts: -q
+
